--- a/lib/webui/css/custom.css
+++ b/lib/webui/css/custom.css
@@ -1,3 +1,15 @@
+body {
+    font-size: 8pt;
+}
+
+.align-right {
+    text-align: right;
+}
+
+.online {
+    color: #77dd77;
+}
+
 #header_row .three {
     text-align: right;
 }
